<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/count1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="85dp"
        android:background="@drawable/item_count"
        android:elevation="10dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/btn1"
        app:layout_constraintStart_toStartOf="@+id/btn1" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="103dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorLove"
        android:onClick="onAddEmotion"
        android:text="@string/emotion_love"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/count2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="85dp"
        android:background="@drawable/item_count"
        android:elevation="10dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/btn2"
        app:layout_constraintStart_toStartOf="@+id/btn2" />
    <Button
        android:id="@+id/btn2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorJoy"
        android:onClick="onAddEmotion"
        android:text="@string/emotion_joy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/count3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="85dp"
        android:background="@drawable/item_count"
        android:elevation="10dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/btn3"
        app:layout_constraintStart_toStartOf="@+id/btn3" />
    <Button
        android:id="@+id/btn3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorSurprise"
        android:onClick="onAddEmotion"
        android:text="@string/emotion_surprise"
        app:layout_constraintBottom_toTopOf="@+id/btn5"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />
    <TextView
        android:id="@+id/count4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="85dp"
        android:background="@drawable/item_count"
        android:elevation="10dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/btn4"
        app:layout_constraintStart_toStartOf="@+id/btn4" />
    <Button
        android:id="@+id/btn4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAnger"
        android:onClick="onAddEmotion"
        android:text="@string/emotion_anger"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/btn6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />
    <TextView
        android:id="@+id/count5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="85dp"
        android:background="@drawable/item_count"
        android:elevation="10dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/btn5"
        app:layout_constraintStart_toStartOf="@+id/btn5" />
    <Button
        android:id="@+id/btn5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorSadness"
        android:onClick="onAddEmotion"
        android:text="@string/emotion_sadness"
        app:layout_constraintBottom_toTopOf="@+id/input_comment"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/count6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="85dp"
        android:background="@drawable/item_count"
        android:elevation="10dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/btn6"
        app:layout_constraintStart_toStartOf="@+id/btn6" />
    <Button
        android:id="@+id/btn6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorFear"
        android:onClick="onAddEmotion"
        android:text="@string/emotion_fear"
        app:layout_constraintBottom_toTopOf="@+id/input_comment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <EditText
        android:id="@+id/input_comment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_comment"
        android:inputType="textMultiLine"
        android:maxLength="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


</android.support.constraint.ConstraintLayout>